Quitado snackbar de error cuando no se completa un login o registro por Google cuando lo cancela el usuario. withFieldError() ya no comparte listas internas entre instancias. Eliminado warning en BackendErrorLocalizer. Preparada creación de documentación de Tests con JaCoCo. Agregadas dependencias MockWebServer y Robolectric. Tests actualizados. Tests añadidos. App versión 1.0.3.